# mix

./: .gitignore  088_box_list_aliasing  090_shape_shadow_bindings  091_for_mut_index  100_foreach_self_field_shape_list  105_shape_reassign  AGENTS.md  CHANGELOG.md  FRAMERATE_BUG_REPORT.md  LICENSE  LLVM_MIGRATION_PLAN.md  MIX-spec_v01.md  Makefile  README.md  REFCOUNT_DEBUG_BRIEF.md  REFCOUNT_PLAN.md  STDLIB_PLAN.md  WASM_TARGET_PLAN.md  ZONES_DESIGN_SKETCH.md  ZONES_VALUE_FIRST_DESIGN_SKETCH.md  button.go  group.go  notes.md  plan.md  tween.go
.claude/: settings.local.json
benchmarks/: bench_fib.c  bench_fib.mix  bench_generic_stack.c  bench_generic_stack.mix  bench_list.c  bench_list.mix  bench_string.c  bench_string.mix  bench_sum_squares.c  bench_sum_squares.mix  results.html  results.json  run_bench.sh  run_compile_bench.sh
docs/: DOCS.html  DOCS.md  RUNTIME_ABI.md  c-backend.html  index.html  lsp_plan.md  overview.html  tutorials.html
editors/zed-mix/tree-sitter-mix/: Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
editors/zed-mix/tree-sitter-mix/bindings/go/: binding.go
editors/zed-mix/tree-sitter-mix/bindings/node/: binding.cc
editors/zed-mix/tree-sitter-mix/bindings/python/tree_sitter_mix/: __init__.py  binding.c
editors/zed-mix/tree-sitter-mix/src/: grammar.json  node-types.json
examples/: Encode_and_Decode_Strings_v01.mix  arithmetic  arithmetic.mix  concurrency.mix  control_flow.mix  extern_c.mix  fibonacci.mix  hello.mix  opengl_hello.frag  raylib.mix  (+21 more)
(+388 files in other folders)
