[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-mix"
description = "Mix grammar for tree-sitter"
version = "0.0.1"
keywords = ["incremental", "parsing", "tree-sitter", "mix"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: zlib/libpng License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed"
]
requires-python = ">=3.8"
license.text = "Zlib"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/tree-sitter/tree-sitter-mix"

[project.optional-dependencies]
core = ["tree-sitter~=0.21"]

[tool.cibuildwheel]
build = "cp38-*"
build-frontend = "build"
